Actually fixed clipping on window caption

--- a/styleBeta.css
+++ b/styleBeta.css
@@ -367,9 +367,9 @@ div{
                     position:relative;
                     display:inline-block;
                     padding-left:8px;
+                    padding-right:16px;
                     height:32px;
                     line-height:32px;
-                    overflow:visible;
                 }
             .winHTML{
                 width:calc(100% - 9px); /* fallback */
